fixed spacing issues mobile

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -67,7 +67,7 @@ transition: transform 0.3s ease-in-out;
 /* Intro section */
 
 #intro-div{
-  padding: 20% 10% 0%;
+  padding: 40vh 10% 0%;
 }
 
 #hi-title {
@@ -102,7 +102,7 @@ h2 {
 }
 
 #port-div {
-  padding: 60% 0% 0%;
+  padding: 80vh 0% 0%;
   text-align: center;
 }
 
@@ -153,6 +153,6 @@ h2 {
     border: 0;
     background-color: rgb(255, 213, 227, 0.8);
     padding:10px;
-    font-size: 3vh;
+    font-size: 3vw;
     font-family: "Roboto", sans-serif;
   }
